<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="update_list"
        android:summary="@string/update_list_summary"
        android:title="@string/update_list" />

    <ListPreference
        android:entries="@array/lol_regions"
        android:entryValues="@array/lol_regions_values"
        android:key="choose_region"
        android:summary="@string/choose_region"
        android:title="@string/region" />

    <Preference
        android:key="privacy_policy"
        android:title="@string/privacy_policy" />

    <Preference
        android:key="terms_conditions"
        android:title="@string/terms_conditions" />

    <Preference
        android:key="about_app"
        android:summary="@string/about_app_summary"
        android:title="@string/about_app" />
</PreferenceScreen>